--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="" href="" />
+    <link rel="icon" type="" href="https://tse3.mm.bing.net/th?id=OIP.THtyXo-tfvQQgWFfkKhT0QHaEf&pid=Api&P=0&h=180" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SOL-ER</title>
   </head>
